--- a/Zadanie1/src/components/ToDoList/ToDoList.module.css
+++ b/Zadanie1/src/components/ToDoList/ToDoList.module.css
@@ -2,3 +2,13 @@
   color: rgb(70, 163, 42);
   font-size: 14px;
 }
+
+.done {
+  text-decoration: line-through;
+  color: darkseagreen;
+}
+
+.noTdone {
+  text-decoration: none;
+  color: green;
+}
